kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: yolo-app
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: backend
