kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb  # match serviceName in StatefulSet spec
  namespace: yolo-app
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb
